# takamrcpp

./: CMakeLists.txt  CPPLINT.cfg
.github/workflows/: test.yml
libs/datetime/: CMakeLists.txt
libs/datetime/include/datetime/: leap_year.h
libs/datetime/src/: leap_year.cpp  leap_year_test.cpp
libs/math/: CMakeLists.txt
libs/math/include/math/: fraction.h  gcd.h  relative_error.h  square_root.h
libs/math/src/: fraction.cpp  fraction_test.cpp  gcd.cpp  gcd_test.cpp  relative_error.cpp  relative_error_test.cpp  square_root.cpp  square_root_test.cpp
libs/physics/: CMakeLists.txt
libs/physics/include/physics/: gravity.h
libs/physics/src/: gravity.cpp  gravity_test.cpp
libs/progression/: CMakeLists.txt
libs/progression/include/progression/: factorial.h  summation.h
libs/progression/src/: factorial.cpp  factorial_test.cpp  summation.cpp  summation_test.cpp
libs/unit/: CMakeLists.txt
libs/unit/include/unit/: distance.h
libs/unit/src/: distance.cpp  distance_test.cpp
